<resources>
    <string name="app_name">Pathshaala</string>
    <string name="web_client_id">126063303088-h32a0chonh0m0hv4p0p1b3a2es79gvfh.apps.googleusercontent.com</string>
    <string name="back_btn">Back Button\n</string>
    <string name="skills_extra">Skills and Extracurriculars</string>
    <string name="add_hobbies">Hobbies and Interests</string>
    <string name="add_extracurriculars">Extracurricular Activities</string>
    <string name="skills_acquired">Skills Accquired</string>
    <string name="user_profile">User Profile</string>
    <string name="sample_logo">Application Sample Logo</string>
    <string name="hello_user">Hello, Welcome Back</string>
    <string name="stats">Statistics</string>
    <string name="search">Search Information</string>
    <string name="course_enrollments_n1075">Course Enrollments\n1075</string>
    <string name="live_students_n75">Live Students\n75</string>
    <string name="loc_stats">Location Based Stats</string>
    <string name="subject">Subject</string>
    <string name="grade">Grade</string>
    <string name="loc">Location</string>
    <string name="send_msg">Send Message</string>
    <string name="wp_page_title">Connect Instantly via WhatsApp 🚀</string>
    <string name="msg_to">Message To:</string>
    <string name="ph_no">Phone Number</string>
    <string name="yr_msg">Write your message</string>
    <string name="instant_msg">Instant Messages</string>
    <string name="class_reminder">1️⃣ Class Reminder: \nHello [Student\'s Name], just a reminder that our next class is scheduled for [Date and Time]. Please be on time!</string>
    <string name="assignemnt_submission">2️⃣ Assignment Submission: \nDear students, please remember to submit your [Assignment Name] by [Deadline]. Let me know if you have any questions!</string>
    <string name="exam_schedule">3️⃣ Exam Schedule Update: \nAttention everyone! The [Subject] exam has been scheduled for [Date]. Please check your syllabus and prepare accordingly.</string>
    <string name="attendance_warning">4️⃣ Attendance Warning :\nHi [Student\'s Name], I noticed that you\'ve missed a few classes recently. Is everything okay? Let me know if you need any help.</string>
    <string name="msg">Message:</string>
    <string name="mob_verify">Mobile Verification</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>