<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f2fd"
    tools:context=".WhatsAppScreen">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/toolbar_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/toolbarImage"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:contentDescription="@string/sample_logo"
            android:src="@drawable/logo_sample_white" />

        <ImageView
            android:id="@+id/imageView151"
            android:layout_width="70dp"
            android:layout_height="57dp"
            android:contentDescription="@string/user_profile"
            android:paddingStart="15dp"
            android:paddingEnd="1dp"
            app:srcCompat="@drawable/profile_icon_no_bg" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans"
        android:text="@string/wp_page_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.018" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView113"
        app:layout_constraintVertical_bias="0.037">

        <TextView
            android:id="@+id/textView112"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/msg_to"
            android:textAlignment="textStart"
            android:textSize="8pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText48"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/cornered_rectangle"
            android:ems="10"
            android:fontFamily="@font/work_sans"
            android:hint="@string/ph_no"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        app:layout_constraintVertical_bias="0.016">

        <TextView
            android:id="@+id/textView114"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/work_sans"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/msg"
            android:textAlignment="textStart"
            android:textSize="8pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText49"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/cornered_rectangle"
            android:ems="10"
            android:fontFamily="@font/work_sans"
            android:hint="@string/yr_msg"
            android:inputType="text" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/cornered_rectangle"
        app:cardBackgroundColor="#faf9f9"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        app:layout_constraintVertical_bias="0.114">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans"
                android:text="@string/instant_msg"
                android:textAlignment="center"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/class_reminder"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView117"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/assignemnt_submission"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView116"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/exam_schedule"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/attendance_warning"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button38"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:background="@drawable/submit_button1"
        android:fontFamily="@font/work_sans"
        android:text="@string/send_msg"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.435" />
</androidx.constraintlayout.widget.ConstraintLayout>